# cailloudb

./: .gitignore  Makefile  README.md  pyproject.toml  settings.json
examples/: batch_in_memory.py  crud_in_memory.py  range_in_memory.py
src/cailloudb/: __init__.py  db.py  dbbuilder.py  dbreader.py  index.py  key_index.py  snapshot.py  store.py  transaction.py  write_batch.py
src/tests/: conftest.py  test_db.py  test_dbreader.py  test_snapshot.py  test_store.py  test_transaction.py
