[project]
name = "cailloudb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ShikoteiCoding", email = "56791111+ShikoteiCoding@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "pylint>=4.0.6",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
